--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Summary: Latitude vs X</title>
+    <title>Comparison: Latitude vs X</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -43,36 +43,30 @@
     </nav>
     <div class="container-fluid" style="background-color: #d3d3d3">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-12">
                 <div class="box">
-                    <h1>Summary: Latitude vs X</h1>
+                    <h1>Comparison: Latitude vs X</h1>
                     <hr>
-                    <img class="img-fluid float-left" src="Visualizations/max_temp.png" width="35%" height="auto">
-                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To acomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.<br>
-                    <br>    
-                    After assembling the dataset, we used MatPlotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <div class="box">
-                    <h3>Visualizations</h3>
-                    <hr>
+                    <p><h5>Click any plot to get an in-depth analysis.</h5></p>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 text-center">
                             <div class="pull-right">
-                                <a href="vis-max_temp.html"><img src="Visualizations/max_temp.png" width="100%" height="100%"></a>
-                                <a href="vis-wind_speed.html"><img src="Visualizations/wind_speed.png" width="100%" height="100%"></a>
+                                <h3>vs Max Temperature</h3>
+                                <a href="vis-max_temp.html"><img src="Visualizations/max_temp.png" alt="vs Max Temperature" width="100%" height="100%"></a>
+                                <h3>vs Wind Speed</h3>
+                                <a href="vis-wind_speed.html"><img src="Visualizations/wind_speed.png" alt="vs Wind Speed" width="100%" height="100%"></a>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 text-center">
                             <div class="pull-right">
-                                <a href="vis-humidity.html"><img src="Visualizations/humidity.png" alt="Latitude vs Humidity" width="100%" height="100%"></a>
-                                <a href="vis-cloudiness.html"><img src="Visualizations/cloudiness.png" alt="Latitude vs Cloudiness" width="100%" height="100%"></a>
+                                <h3>vs Humidity</h3>
+                                <a href="vis-humidity.html"><img src="Visualizations/humidity.png" alt="vs Humidity" width="100%" height="100%"></a>
+                                <h3>vs Cloudiness</h3>
+                                <a href="vis-cloudiness.html"><img src="Visualizations/cloudiness.png" alt="vs Cloudiness" width="100%" height="100%"></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 </body>
