--- a/WebVisualizations/data1.html
+++ b/WebVisualizations/data1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Summary: Latitude vs X</title>
+    <title>Comparison: Latitude vs X</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand" style="color: #fff;" href="index.html">Latitude</a>
+        <a class="navbar-brand" href="#" style="color: #ffff;">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,39 +41,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid" style="background-color: #d3d3d3">
-        <div class="row">
-            <div class="col-md-7">
-                <div class="box">
-                    <h1>Summary: Latitude vs X</h1>
-                    <hr>
-                    <img class="img-fluid float-left" src="Visualizations/max_temp.png" width="35%" height="auto">
-                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To acomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.<br>
-                    <br>    
-                    After assembling the dataset, we used MatPlotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <div class="box">
-                    <h3>Visualizations</h3>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="pull-right">
-                                <a href="vis-max_temp.html"><img src="Visualizations/max_temp.png" width="100%" height="100%"></a>
-                                <a href="vis-wind_speed.html"><img src="Visualizations/wind_speed.png" width="100%" height="100%"></a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="pull-right">
-                                <a href="vis-humidity.html"><img src="Visualizations/humidity.png" alt="Latitude vs Humidity" width="100%" height="100%"></a>
-                                <a href="vis-cloudiness.html"><img src="Visualizations/cloudiness.png" alt="Latitude vs Cloudiness" width="100%" height="100%"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
 </body>
 </html>
