--- a/WebVisualizations/vis-humidity.html
+++ b/WebVisualizations/vis-humidity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Summary: Latitude vs X</title>
+    <title>Humidity</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -45,12 +45,10 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="box">
-                    <h1>Summary: Latitude vs X</h1>
+                    <h1>Latitude vs Humidity</h1>
                     <hr>
-                    <img class="img-fluid float-left" src="Visualizations/max_temp.png" width="35%" height="auto">
-                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To acomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.<br>
-                    <br>    
-                    After assembling the dataset, we used MatPlotlib to plot various aspects of the weather vs latitude. Factors we looked at included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+                    <img class="img-fluid" src="Visualizations/humidity.png">
+                    <p>The humidity data doesn't represent itself with the nearly perfect normal distribution that the maximum temperature data does but there does appaer to be more clustering on one side of the earth. With higher temperatures comes more humidity, as the sun heats up bodies of water and adds more moisture to the air, and the data supports this with a skew in humidity in the Northern Hemisphere in early September.</p>
                 </div>
             </div>
             <div class="col-md-5">
